why tensors ready

--- a/book/math_foundations/linalg/tensors.ipynb
+++ b/book/math_foundations/linalg/tensors.ipynb
@@ -5,7 +5,7 @@
             "id": "3d50960f",
             "metadata": {},
             "source": [
-                "# Lineaire Algebra\n",
+                "# Data containers\n",
                 "\n",
                 "## Notatie\n",
                 "We volgen doorheen de cursus de notatie conventies in [Goodfellow et al. (2016, _xi-xiv_)](https://www.deeplearningbook.org/front_matter.pdf).\n",
