--- a/book/ml_principles/basis/algorithmes.ipynb
+++ b/book/ml_principles/basis/algorithmes.ipynb
@@ -194,7 +194,7 @@
                 ":icon: false\n",
                 ":class: simple\n",
                 "\n",
-                "Hier demonstreren we het principe van __unsupervised learning__ met behulp van een _Kohonen Self-Organizing Map (SOM)_. We zullen zien dat we aan de hand van een _competitief leeralgorithme_ een model kunnen trainen dat een 3D kleurruimte (RGB) vertaalt naar een 2D kleurkaart (waarbij de originele afstand tussen kleuren in 3D zoveel mogelijk behouden blijft). Het gaat dus om dimensionaliteitsreductie als taak. Om de performantie van de oplossing  te scoren zullen we gebruik maken van de _quantization error_. Merk op dat er geen _Loss_ functie gebruikt wordt tijdens het trainen.\n",
+                "Hier demonstreren we het principe van __unsupervised learning__ met behulp van een _Kohonen Self-Organizing Map (SOM)_ [](https://doi.org/10.1007%2F978-3-662-00784-6). We zullen zien dat we aan de hand van een _competitief leeralgorithme_ een model kunnen trainen dat een 3D kleurruimte (RGB) vertaalt naar een 2D kleurkaart (waarbij de originele afstand tussen kleuren in 3D zoveel mogelijk behouden blijft). Het gaat dus om dimensionaliteitsreductie als taak. Om de performantie van de oplossing  te scoren zullen we gebruik maken van de _quantization error_. Merk op dat er geen _Loss_ functie gebruikt wordt tijdens het trainen.\n",
                 "\n",
                 "1. Data Generatie\n",
                 "\n",
