--- a/book/math_foundations/linalg/dot_prod.ipynb
+++ b/book/math_foundations/linalg/dot_prod.ipynb
@@ -258,17 +258,22 @@
             "source": [
                 "### Toepassingen\n",
                 "#### Lineaire gewichten\n",
-                "Zowel bij lineaire regressie als bij simpele neurale netwerken zoals _perceptrons_, worden input features vertaald naar model outputs door gewogen sommen te nemen.\n",
+                "Zowel bij lineaire regressie als bij simpele neurale netwerken zoals _perceptrons_ [](https://doi.org/10.1037%2Fh0042519), worden input features vertaald naar model outputs door gewogen sommen te nemen.\n",
                 "Deze operatie komt neer op het dot product tussen de input vector $\\pmb{x}$ en een vector van gewichten $\\pmb{w}$: $\\pmb{w}^T\\pmb{x}$.\n",
                 "\n",
                 ":::{note} Perceptron\n",
-                "Een perceptron is de eenvoudigste vorm van een neuraal netwerk. Inputs worden via een lineaire combinatie met gewichten en een (meestal niet-lineaire) activatie functie vertaald naar een output.\n",
+                "Een perceptron is een vroeg model van een artificiëel neuron, beschreven en gesimuleerd door [](https://doi.org/10.1037%2Fh0042519) die met dit werk verder bouwde op het werk van [](https://doi.org/10.1007%2FBF02478259). Inputs worden via een lineaire combinatie met gewichten en een _activatiefunctie_ vertaald naar een output.\n",
+                "$$\n",
+                "\\pmb{y} = f(\\pmb{x}) = h(\\pmb{w}^T\\pmb{x} + b)\n",
+                "$$\n",
+                "De model kon getraind worden om inputs _binair_ te classificeren (dus in te delen in 2 categorieën) op voorwaarde dat de categoriëen overeen komen met een _lineair onderscheidbaar patroon_ in de inputs. De gewichten vector beschrijft een $n$-dimensionele _hyper plane_ om inputs binair op te delen. De term $b$ heet de _bias_ en geeft de translatie aan van de hyper plane aan ten opzichte van de oorsprong. \n",
+                "In de originele vorm is de activatiefunctie $h$ een stapfunctie met output $1$ bij $\\pmb{w}^T\\pmb{x} + b > 0$ en $0$ bij $\\pmb{w}^T\\pmb{x} + b <= 0$ (de zogenaamde _Heaviside_ stapfunctie).\n",
                 "```\n",
-                "           x₁             x₂     ...     xₙ             b  \n",
+                "           x₁             x₂     ...     xₙ            1.0  \n",
                 "           |              |              |              |\n",
                 "           |              |              |              |\n",
                 "           |              |              |              |\n",
-                "           w₁             w₂     ...     wₙ            1.0\n",
+                "           w₁             w₂     ...     wₙ             b\n",
                 "            \\             |             /              /\n",
                 "             \\            |            /              /\n",
                 "              \\           |           /              /\n",
@@ -289,7 +294,7 @@
                 "                                |\n",
                 "                                v\n",
                 "                        Activation function\n",
-                "                              φ(z)\n",
+                "                              h(z)\n",
                 "                                |\n",
                 "                                v\n",
                 "                             Output y\n",
@@ -365,7 +370,17 @@
                 "$$\n",
                 "cos(\\theta) = \\frac{\\pmb{a}^T\\pmb{b}}{||\\pmb{a}||_2||\\pmb{b}||_2}\n",
                 "$$\n",
-                "In het geval dat $\\pmb{a}$ en $\\pmb{b}$ gecentreerd worden door hun respectievelijke gemiddeldes van de waarden af te trekken, is de cosine similarity gelijk aan de Pearson correlatiecoëfficient. "
+                "Om dit te begrijpen hebben we de geometrische interpretatie van het dot-product nodig\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "8307a5cf",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# geometric interpretation of dot product"
             ]
         },
         {
@@ -373,6 +388,7 @@
             "id": "8e01578e",
             "metadata": {},
             "source": [
+                "In het geval dat $\\pmb{a}$ en $\\pmb{b}$ gecentreerd worden door hun respectievelijke gemiddeldes van de waarden af te trekken, is de cosine similarity gelijk aan de Pearson correlatiecoëfficient. \n",
                 "🚧"
             ]
         }
