--- a/book/math_foundations/linalg/special_tensors.ipynb
+++ b/book/math_foundations/linalg/special_tensors.ipynb
@@ -14,7 +14,7 @@
             "metadata": {},
             "source": [
                 "## Vierkante matrix\n",
-                "Een **vierkante matrix** is een matrix met evenveel rijen als kolommen. **Een matrix $\\pmb{V}^{m \\times n}$ is vierkant als en slechts als $m = n$**.\n",
+                "Een **vierkante matrix** is een matrix met evenveel rijen als kolommen. **Een matrix $\\pmb{V}_{m \\times n}$ is vierkant als en slechts als $m = n$**.\n",
                 "Geometrisch gezien, doen ze dienst als transformatoren van vectoren, meer bepaald om die te schalen, reflecteren en/of te roteren. Welke transformatie precies gebeurt, kan afgeleid worden van de zogenaamde **determinant**.\n",
                 "In het geval van een $2 \\times 2$ matrix (2D ruimte):\n",
                 "$$\n",
@@ -55,7 +55,7 @@
                 "\n",
                 "Een **diagonale matrix** heeft niet-nul elementen alleen op de hoofddiagonaal. Alle _off_-diagonale elementen zijn nul. **Een matrix $\\pmb{D}$ is diagonaal als en slechts als $D_{i,j} = 0$ voor alle $i \\neq j$**.\n",
                 "$$\n",
-                "\\pmb{D}^{m \\times n} = \\begin{bmatrix}\n",
+                "\\pmb{D}_{m \\times n} = \\begin{bmatrix}\n",
                 "D_{1,1} & 0 & 0 & \\ldots & 0 \\cr\n",
                 "0 & D_{2,2} & 0 & \\ldots & 0 \\cr\n",
                 "0 & 0 & D_{3,3} & \\ldots & 0 \\cr\n",
@@ -112,7 +112,7 @@
                 "\n",
                 "Een **identiteitsmatrix is een _vierkante_ _diagonaal_ matrix met enkel de waarde $1$ op de hoofddiagonaal**.\n",
                 "$$\n",
-                "\\pmb{I}^n = \\begin{bmatrix}\n",
+                "\\pmb{I}_n = \\begin{bmatrix}\n",
                 "1 & 0 & 0 & \\ldots & 0 \\cr\n",
                 "0 & 1 & 0 & \\ldots & 0 \\cr\n",
                 "0 & 0 & 1 & \\ldots & 0 \\cr\n",
@@ -195,7 +195,7 @@
                 "\n",
                 "Een **_upper triangular_ matrix** is een vierkante matrix met alle elementen onder de hoofddiagonaal gelijk aan nul. **Een matrix $\\pmb{U}^{m \\times n}$ is een _upper triangular_ matrix als en slechts als $m = n$ en $U_{i,j} = 0$ voor alle $i < j$**\n",
                 "$$\n",
-                "\\pmb{U}^n = \\begin{bmatrix}\n",
+                "\\pmb{U}_n = \\begin{bmatrix}\n",
                 "U_{1,1} & U_{1,2} & U_{1,3} & \\ldots & U_{1,n} \\cr\n",
                 "0 & U_{2,2} & U_{2,3} & \\ldots & U_{2,n} \\cr\n",
                 "0 & 0 & U_{3,3} & \\ldots & U_{3,n} \\cr\n",
@@ -244,7 +244,7 @@
                 "\n",
                 "Een **_lower triangular_ matrix** is een vierkante matrix met alle elementen boven de hoofddiagonaal gelijk aan nul. **Een matrix $\\pmb{L}^{m \\times n}$ is een _lower triangular_ matrix als en slechts als $m = n$ en $U_{i,j} = 0$ voor alle $i > j$**\n",
                 "$$\n",
-                "\\pmb{L}^n = \\begin{bmatrix}\n",
+                "\\pmb{L}_n = \\begin{bmatrix}\n",
                 "D_{1,1} & 0 & 0 & \\ldots & 0 \\cr\n",
                 "D_{2,1} & D_{2,2} & 0 & \\ldots & 0 \\cr\n",
                 "D_{3,1} & D_{3,2} & D_{3,3} & \\ldots & 0 \\cr\n",
