--- a/book/math_foundations/linalg/special_tensors.ipynb
+++ b/book/math_foundations/linalg/special_tensors.ipynb
@@ -4,7 +4,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "# Speciale Matrices\n",
+                "# Speciale matrices\n",
                 "\n",
                 "Sommige speciale types van matrices zijn zeer bruikbaar in de context van Machine Learning."
             ]
