--- a/book/math_foundations/linalg/lineaire_regressie.ipynb
+++ b/book/math_foundations/linalg/lineaire_regressie.ipynb
@@ -5,12 +5,12 @@
    "id": "185ec471",
    "metadata": {},
    "source": [
-    "## Lineaire regressie\n",
+    "# Lineaire regressie\n",
     "Lineaire regressie is een centrale techniek binnen Machine Learning. Om de wiskunde van ML te begrijpen is het een absolute must om deze techniek ten volle te doorgronden.  \n",
     "  \n",
-    "### Data simulatie\n",
-    "We beginnen met de simulatie van een simpel patroon:\n",
-    "\n"
+    "## Data simulatie\n",
+    "We beginnen met de simulatie van een simpele situatie. \n",
+    "🚧"
    ]
   }
  ],
