--- a/book/math_foundations/linalg/tensors.ipynb
+++ b/book/math_foundations/linalg/tensors.ipynb
@@ -5,15 +5,14 @@
             "id": "3d50960f",
             "metadata": {},
             "source": [
-                "# Data containers\n",
+                "# Numerieke primitieven\n",
+                "\n",
+                "Numerieke waarden worden in machine learning voorgesteld als één van volgende wiskundige objecten: **scalairen**, **vectoren**, **matrices** of **tensors**.\n",
                 "\n",
                 "## Notatie\n",
                 "We volgen doorheen de cursus de notatie conventies in [Goodfellow et al. (2016, _xi-xiv_)](https://www.deeplearningbook.org/front_matter.pdf).\n",
                 "\n",
-                "## Numerieke primitieven\n",
-                "Numerieke waarden worden in machine learning voorgesteld als één van volgende wiskundige objecten: **scalairen**, **vectoren**, **matrices** of **tensors**.\n",
-                "\n",
-                "### Scalairen\n",
+                "## Scalairen\n",
                 "Een scalaire waarde (op simpelwel \"**scalair**\") is gewoon een **enkelvoudig getal** - in tegenstelling tot de andere objecten die een verzameling van meerdere getallen voorstellen.  \n",
                 "  \n",
                 "We zullen ze in wiskundige notatie aanduiden met schuingedrukte kleine letters, bv. $s \\in \\mathbb{R}$.\n",
@@ -25,7 +24,7 @@
                 "- reëel: $\\mathbb{R} = \\mathbb{Q} \\cup \\{\\pi, e, ...\\}$\n",
                 "- enz.\n",
                 "\n",
-                "### Vectoren\n",
+                "## Vectoren\n",
                 "**Een vector is een geordende reeks van getallen van éénzelfde type**. Ieder individueel getal wordt geïdentificeerd door de _index_ binnen de ordening (startend bij $1$).\n",
                 "Een vector duiden we in kleine letters en in het vet aan, bv. $\\pmb{x}$. Het eerste element duiden we aan met $x_1$, het laatste met $x_n$. Wanneer we de elementen expliciet willen voorstellen,\n",
                 "gebruiken we een kolom met vierkante haakjes: \n",
@@ -1092,7 +1091,7 @@
             "id": "08fe28f7",
             "metadata": {},
             "source": [
-                "### Matrices\n",
+                "## Matrices\n",
                 "Wanneer we bijvoorbeeld niet 1 maar $m$ punten in een $n$ dimensionele ruimte willen weergeven, kunnen we een **matrix** notatie gebruiken: $\\pmb{X} \\isin \\mathbb{R}^{mxn}$.\n",
                 "**Een matrix is een geordende reeks van vectoren**.\n",
                 "$$\n",
@@ -1145,7 +1144,7 @@
             "metadata": {},
             "source": [
                 "\n",
-                "### Tensors\n",
+                "## Tensors\n",
                 "Wanneer we het concept van een matrix uitbreiden naar een **N-Dimensionele _grid_ van vectoren**, spreken we van een **tensor**.  \n",
                 "We kunnen dit het best illustreren aan de hand van beeld-data. Een RGB-afbeelding bestaat uit een verzameling pixels die geordend zijn in een 2-dimensionele _grid_.\n",
                 "De dimensies worden bepaald door de resolutie; het aantal horizontale en verticale pixels. Iedere pixel is een vector met 3 waarden, overeenkomstig met de _channels_: **R**ood, **G**roen, **B**lauw."
