--- a/book/math_foundations/linalg/tensors.ipynb
+++ b/book/math_foundations/linalg/tensors.ipynb
@@ -7,13 +7,13 @@
             "source": [
                 "# Numerieke primitieven\n",
                 "\n",
-                "Numerieke waarden worden in machine learning voorgesteld als één van volgende wiskundige objecten: **scalairen**, **vectoren**, **matrices** of **tensors**.\n",
+                "Numerieke waarden worden in machine learning voorgesteld als één van de volgende wiskundige objecten: **scalairen**, **vectoren**, **matrices** of **tensors**.\n",
                 "\n",
                 "## Notatie\n",
-                "We volgen doorheen de cursus de notatie conventies in [Goodfellow et al. (2016, _xi-xiv_)](https://www.deeplearningbook.org/front_matter.pdf).\n",
+                "We volgen doorheen de cursus de notatieconventies in [Goodfellow et al. (2016, _xi-xiv_)](https://www.deeplearningbook.org/front_matter.pdf).\n",
                 "\n",
                 "## Scalairen\n",
-                "Een scalaire waarde (op simpelwel \"**scalair**\") is gewoon een **enkelvoudig getal** - in tegenstelling tot de andere objecten die een verzameling van meerdere getallen voorstellen.  \n",
+                "Een scalaire waarde (of simpelweg \"**scalair**\") is gewoon een **enkelvoudig getal** - in tegenstelling tot de andere objecten die een verzameling van meerdere getallen voorstellen.  \n",
                 "  \n",
                 "We zullen ze in wiskundige notatie aanduiden met schuingedrukte kleine letters, bv. $s \\in \\mathbb{R}$.\n",
                 "\n",
@@ -43,7 +43,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 1,
             "id": "cdaad223",
             "metadata": {},
             "outputs": [],
@@ -54,7 +54,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 10,
+            "execution_count": 2,
             "id": "vector_3d_viz",
             "metadata": {},
             "outputs": [
@@ -1092,7 +1092,7 @@
             "metadata": {},
             "source": [
                 "## Matrices\n",
-                "Wanneer we bijvoorbeeld niet 1 maar $m$ punten in een $n$ dimensionele ruimte willen weergeven, kunnen we een **matrix** notatie gebruiken: $\\pmb{X} \\isin \\mathbb{R}^{mxn}$.\n",
+                "Wanneer we bijvoorbeeld niet 1 maar $m$ punten in een $n$ dimensionale ruimte willen weergeven, kunnen we een **matrix** notatie gebruiken: $\\pmb{X} \\isin \\mathbb{R}^{mxn}$.\n",
                 "**Een matrix is een geordende reeks van vectoren**.\n",
                 "$$\n",
                 "\\pmb{X} = \\begin{bmatrix}\n",
@@ -1132,7 +1132,7 @@
                 "\n",
                 "\n",
                 ":::{note} y, X\n",
-                "In machine learning worden (uni-variate) target waarden doorgaans aangeduid met de _vector_ $\\pmb{y}$. Uni-variaat wil zeggen dat het over slechts 1 target gaat per input. Als over (uni-variate) model outputs gaat,\n",
+                "In machine learning worden (univariaat) target waarden doorgaans aangeduid met de _vector_ $\\pmb{y}$. Univariaat wil zeggen dat het over slechts 1 target gaat per input. Als over (univariaat) model outputs gaat,\n",
                 "gebruiken we $\\pmb{\\hat{y}}$ om aan te duiden dat het over _schattingen_ gaat.  \n",
                 "De inputs worden aangeduid met de _matrix_ $\\pmb{X}$, waarbij de **rij-vector** $\\pmb{x_i} = [x_{i, 1}, \\ldots, x_{i, j}, \\ldots, x_{i, n}]^T$ de $i$-de input is.\n",
                 ":::"
@@ -1145,14 +1145,14 @@
             "source": [
                 "\n",
                 "## Tensors\n",
-                "Wanneer we het concept van een matrix uitbreiden naar een **N-Dimensionele _grid_ van vectoren**, spreken we van een **tensor**.  \n",
-                "We kunnen dit het best illustreren aan de hand van beeld-data. Een RGB-afbeelding bestaat uit een verzameling pixels die geordend zijn in een 2-dimensionele _grid_.\n",
-                "De dimensies worden bepaald door de resolutie; het aantal horizontale en verticale pixels. Iedere pixel is een vector met 3 waarden, overeenkomstig met de _channels_: **R**ood, **G**roen, **B**lauw."
+                "Wanneer we het concept van een matrix uitbreiden naar een **N-dimensionale _grid_ van vectoren**, spreken we van een **tensor**.  \n",
+                "We kunnen dit het best illustreren aan de hand van beeld-data. Een RGB-afbeelding bestaat uit een verzameling pixels die geordend zijn in een 2-dimensionale _grid_.\n",
+                "De dimensies worden bepaald door de resolutie; het aantal horizontale en verticale pixels. Iedere pixel is een vector met 3 waarden, overeenkomstig de _channels_: **R**ood, **G**roen, **B**lauw."
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 3,
             "id": "9ea87774",
             "metadata": {},
             "outputs": [],
@@ -1163,7 +1163,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 4,
             "id": "0a5883b9",
             "metadata": {},
             "outputs": [
@@ -1188,7 +1188,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 32,
+            "execution_count": 5,
             "id": "852efeb1",
             "metadata": {},
             "outputs": [
@@ -1208,7 +1208,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 54,
+            "execution_count": 6,
             "id": "0d234abf",
             "metadata": {},
             "outputs": [
@@ -1234,7 +1234,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 65,
+            "execution_count": 7,
             "id": "c89e1573",
             "metadata": {},
             "outputs": [],
@@ -1244,7 +1244,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 8,
             "id": "fe063bab",
             "metadata": {},
             "outputs": [
@@ -1280,7 +1280,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 9,
             "id": "142ab085",
             "metadata": {},
             "outputs": [
@@ -1299,7 +1299,7 @@
                             "       [11,  5, 17]], dtype=uint8)"
                         ]
                     },
-                    "execution_count": 70,
+                    "execution_count": 9,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -1311,7 +1311,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 71,
+            "execution_count": 10,
             "id": "879d150a",
             "metadata": {},
             "outputs": [
@@ -1321,7 +1321,7 @@
                             "array([27, 26, 31], dtype=uint8)"
                         ]
                     },
-                    "execution_count": 71,
+                    "execution_count": 10,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -1330,19 +1330,25 @@
                 "# Single pixel vector\n",
                 "np.array(img)[-100, 100, :]"
             ]
-        },
-        {
-            "cell_type": "markdown",
-            "id": "8e01578e",
-            "metadata": {},
-            "source": [
-                "🚧"
-            ]
         }
     ],
     "metadata": {
+        "kernelspec": {
+            "display_name": "ml-courses",
+            "language": "python",
+            "name": "python3"
+        },
         "language_info": {
-            "name": "python"
+            "codemirror_mode": {
+                "name": "ipython",
+                "version": 3
+            },
+            "file_extension": ".py",
+            "mimetype": "text/x-python",
+            "name": "python",
+            "nbconvert_exporter": "python",
+            "pygments_lexer": "ipython3",
+            "version": "3.10.18"
         }
     },
     "nbformat": 4,
