--- a/book/math_foundations/linalg/dot_prod.ipynb
+++ b/book/math_foundations/linalg/dot_prod.ipynb
@@ -6,7 +6,7 @@
             "metadata": {},
             "source": [
                 "# _Dot_ product\n",
-                "Misschien wel de belangrijkste operatie in machine learning is het **_dot_** of **_inner_** product tussen 2 vectoren uit eenzelfde ruimte (dus met een gelijk aantal elementen).\n",
+                "Misschien wel de belangrijkste operatie in machine learning is het **_dot_** of **_inner_** product tussen 2 vectoren uit dezelfde ruimte (dus met een gelijk aantal elementen).\n",
                 "De eerste vector is daarbij een rij-vector $\\pmb{a}^T$ en de tweede een kolom-vector $\\pmb{b}$.\n",
                 "$$\n",
                 "\\begin{aligned}\n",
@@ -24,12 +24,12 @@
                 "\\end{aligned}\n",
                 "$$\n",
                 "\n",
-                "**Het dot product tussen 2 vectoren uit een gegeven ruimte, is dus de som van de element-gewijze producten. Het resultaat is altijd een scalaire waarde.**"
+                "**Het dot product tussen 2 vectoren uit een gegeven ruimte, is dus de som van de elementgewijze producten. Het resultaat is altijd een scalaire waarde.**"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 84,
+            "execution_count": 19,
             "id": "d4af08fb",
             "metadata": {},
             "outputs": [
@@ -49,7 +49,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 20,
             "id": "e23621a8",
             "metadata": {},
             "outputs": [
@@ -59,7 +59,7 @@
                             "np.int64(32)"
                         ]
                     },
-                    "execution_count": 73,
+                    "execution_count": 20,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -104,12 +104,12 @@
                 "\\end{aligned}\n",
                 "$$\n",
                 "\n",
-                "**Bij het dot product tussen een matrix en een vector, is resultaat altijd een vector met eventeel elementen als er _rijen_ zijn in de matrix.**"
+                "**Bij het dot product tussen een matrix en een vector, is resultaat altijd een vector met evenveel elementen als er _rijen_ zijn in de matrix.**"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 88,
+            "execution_count": 21,
             "id": "acc754e6",
             "metadata": {},
             "outputs": [
@@ -134,7 +134,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 22,
             "id": "169f2f01",
             "metadata": {},
             "outputs": [
@@ -144,7 +144,7 @@
                             "array([32, 77])"
                         ]
                     },
-                    "execution_count": 82,
+                    "execution_count": 22,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -164,8 +164,8 @@
             "metadata": {},
             "source": [
                 "Tenslotte bespreken we ook nog het geval van de uitbreiding naar 2 matrices; het _inner product_ $\\pmb{A}\\pmb{B}^T$.\n",
-                "Geometrisch kunnen we beide matrices zien als verzamelingen van punten in dezelfde $n$-dimensionele ruimte. Ze hebben hetzelfde aantal kolommen, maar niet per se het zelfde aantal rijen.\n",
-                "Meestal wordt $\\pmb{B}$ direct gezien als een matrix met $n$ rijen en een bepaald aantal kolomen $p$. Dan wordt de notatie simpelweg $\\pmb{A}\\pmb{B}$.\n",
+                "Geometrisch kunnen we beide matrices zien als verzamelingen van punten in dezelfde $n$-dimensionele ruimte. Ze hebben hetzelfde aantal kolommen, maar niet per se hetzelfde aantal rijen.\n",
+                "Meestal wordt $\\pmb{B}$ direct gezien als een matrix met $n$ rijen en een bepaald aantal kolommen $p$. Dan wordt de notatie simpelweg $\\pmb{A}\\pmb{B}$.\n",
                 "$$\n",
                 "\\begin{aligned}\n",
                 "\\pmb{A}\\pmb{B} &= \\begin{bmatrix}\n",
@@ -188,12 +188,12 @@
                 "\\end{aligned}\n",
                 "$$\n",
                 "\n",
-                "**Bij het dot product van 2 matrices $\\pmb{A}$ en $\\pmb{B}$, is resultaat altijd een matrix met eventeel rijen als er _rijen_ zijn in $\\pmb{A}$ en evenveel kolommen als er kolommen zijn in $\\pmb{B}$.**"
+                "**Bij het dot product van 2 matrices $\\pmb{A}$ en $\\pmb{B}$, is resultaat altijd een matrix met evenveel rijen als er _rijen_ zijn in $\\pmb{A}$ en evenveel kolommen als er kolommen zijn in $\\pmb{B}$.**"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 87,
+            "execution_count": 23,
             "id": "58942b0b",
             "metadata": {},
             "outputs": [
@@ -216,7 +216,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 24,
             "id": "38155373",
             "metadata": {},
             "outputs": [
@@ -227,7 +227,7 @@
                             "       [173, 188, 203, 218]])"
                         ]
                     },
-                    "execution_count": 91,
+                    "execution_count": 24,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -262,11 +262,11 @@
                 "Deze operatie komt neer op het dot product tussen de input vector $\\pmb{x}$ en een vector van gewichten $\\pmb{w}$: $\\pmb{w}^T\\pmb{x}$.\n",
                 "\n",
                 ":::{note} Perceptron\n",
-                "Een perceptron is een vroeg model van een artificiëel neuron, beschreven en gesimuleerd door [](https://doi.org/10.1037%2Fh0042519) die met dit werk verder bouwde op het werk van [](https://doi.org/10.1007%2FBF02478259). Inputs worden via een lineaire combinatie met gewichten en een _activatiefunctie_ vertaald naar een output.\n",
+                "Een perceptron is een vroeg model van een artificieel neuron, beschreven en gesimuleerd door [](https://doi.org/10.1037%2Fh0042519) die met dit werk verder bouwde op het werk van [](https://doi.org/10.1007%2FBF02478259). Inputs worden via een lineaire combinatie met gewichten en een _activatiefunctie_ vertaald naar een output.\n",
                 "$$\n",
                 "\\pmb{y} = f(\\pmb{x}) = h(\\pmb{w}^T\\pmb{x} + b)\n",
                 "$$\n",
-                "De model kon getraind worden om inputs _binair_ te classificeren (dus in te delen in 2 categorieën) op voorwaarde dat de categoriëen overeen komen met een _lineair onderscheidbaar patroon_ in de inputs. De gewichten vector beschrijft een $n$-dimensionele _hyper plane_ om inputs binair op te delen. De term $b$ heet de _bias_ en geeft de translatie aan van de hyper plane aan ten opzichte van de oorsprong. \n",
+                "De model kon getraind worden om inputs _binair_ te classificeren (dus in te delen in 2 categorieën) op voorwaarde dat de categorieën overeen komen met een _lineair onderscheidbaar patroon_ in de inputs. De gewichten vector beschrijft een $n$-dimensionele _hyper plane_ om inputs binair op te delen. De term $b$ heet de _bias_ en geeft de translatie aan van de hyper plane aan ten opzichte van de oorsprong. \n",
                 "In de originele vorm is de activatiefunctie $h$ een stapfunctie met output $1$ bij $\\pmb{w}^T\\pmb{x} + b > 0$ en $0$ bij $\\pmb{w}^T\\pmb{x} + b <= 0$ (de zogenaamde _Heaviside_ stapfunctie).\n",
                 "```\n",
                 "           x₁             x₂     ...     xₙ            1.0  \n",
@@ -346,7 +346,7 @@
             "source": [
                 "#### Euclidische norm\n",
                 "Vectoren hebben een grootte en een richting, zoals bijvoorbeeld de versnelling van een object in de ruimte $\\pmb{a} = [a_x a_y a_z]^T$.\n",
-                "Vaak willen we de grootte uitdrukken in een scalaire waarde. Dat doen we aan de hand van een **norm-functie $L^p$** die gedefiniëert is als:\n",
+                "Vaak willen we de grootte uitdrukken in een scalaire waarde. Dat doen we aan de hand van een **norm-functie $L^p$** die gedefiniëerd is als:\n",
                 "$$\n",
                 "||\\pmb{x}||_p = \\begin{pmatrix}\\sum_{i}|x_i|^p\\end{pmatrix}^{\\frac{1}{p}}\n",
                 "$$\n",
