--- a/book/math_foundations/linalg/inverse.ipynb
+++ b/book/math_foundations/linalg/inverse.ipynb
@@ -1,172 +1,172 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "d0fd4f19",
-   "metadata": {},
-   "source": [
-    "# Matrix inverse\n",
-    "\n",
-    "Matrix inversie is een sleutel tot belangrijke mogelijkheden in Machine Learning. In de vorige sectie zagen we de **identiteitsmatrix** als speciale matrix.\n",
-    "Deze spelen een centrale rol in de formele definitie van de **matrix inverse** $\\pmb{A}^{-1}$ van een matrix $\\pmb{A}$:\n",
-    "$$\n",
-    "\\pmb{A}^{-1}\\pmb{A} = \\pmb{I}_n\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "759770f7",
-   "metadata": {},
-   "source": [
-    "## Stelsels van lineaire vergelijkingen\n",
-    "We kunnen matrix inverses gebruiken om oplossingen te vinden voor zogenaamde **stelsels van lineaire vergelijkingen**. De algemene vorm van een lineaire vergelijking is:\n",
-    "$$\n",
-    "y = \\beta_1x_1 + \\beta_2x_2 + \\ldots + \\beta_nx_n\n",
-    "$$\n",
-    "We kunnen dit in vector notatie vertalen naar:\n",
-    "$$\n",
-    "y = \\begin{bmatrix} \\beta_1 & \\beta_2 & \\ldots & \\beta_n\\end{bmatrix}^T\\begin{bmatrix}\n",
-    "x_1 \\cr\n",
-    "x_2 \\cr\n",
-    "\\vdots \\cr\n",
-    "x_n\n",
-    "\\end{bmatrix}\n",
-    "$$\n",
-    "Bij een stelsel van lineaire vergelijkingen blijft $\\pmb{b} = \\begin{bmatrix} \\beta_1 & \\beta_2 & \\ldots & \\beta_n\\end{bmatrix}^T$ constant, maar zijn er verschillende instanties van\n",
-    "$\\pmb{x} = \\begin{bmatrix} x_1 & x_2 & \\ldots & x_n\\end{bmatrix}^T$:\n",
-    "\n",
-    "$$\n",
-    "\\begin{align}\n",
-    "y_1 &= \\beta_1x_{1,1} + \\beta_2x_{1,2} + \\ldots + \\beta_nx_{1,n} \\cr\n",
-    "y_2 &= \\beta_1x_{2,1} + \\beta_2x_{2,2} + \\ldots + \\beta_nx_{2,n} \\cr\n",
-    "\\ldots \\cr\n",
-    "y_m &= \\beta_1x_{m,1} + \\beta_2x_{m,2} + \\ldots + \\beta_nx_{m,n} \\cr\n",
-    "\\end{align}\n",
-    "$$\n",
-    "Dit kunnen compact in matrix notatie schrijven:\n",
-    "$$\n",
-    "\\pmb{y} = \\pmb{X}\\pmb{b}\n",
-    "$$\n",
-    "In een stelsel van vergelijkingen het de bedoeling om een oplossing te vinden voor $\\pmb{b}$:\n",
-    "\n",
-    "$$\n",
-    "\\begin{align}\n",
-    "\\pmb{y} &= \\pmb{X}\\pmb{b} \\cr\n",
-    "\\pmb{X}^{-1}\\pmb{y} &= \\pmb{X}^{-1}\\pmb{X}\\pmb{b} \\cr\n",
-    "\\pmb{X}^{-1}\\pmb{y} &= \\pmb{I}_n\\pmb{b} \\cr\n",
-    "\\pmb{X}^{-1}\\pmb{y} &= \\pmb{b} \\cr\n",
-    "\\pmb{b} &= \\pmb{X}^{-1}\\pmb{y}\n",
-    "\\end{align}\n",
-    "$$\n",
-    "\n",
-    "We kunnen de vergelijkingen dus oplossen voor $\\pmb{b}$ als we de inverse $\\pmb{X}-1$ kunnen berekenen.\n",
-    "Dat is helaas minder evident dan we zouden hopen, maar dat is voor een volgende sectie.\n",
-    "Hier geven we een eenvoudig voorbeeld met een stelsel van 2 vergelijkingen en $n=2$.\n",
-    "\n",
-    "$$\n",
-    "\\begin{align}\n",
-    "-5 &= \\beta_1 + \\beta_2 3 \\cr\n",
-    "4 &= \\beta_1 2 - \\beta_2\n",
-    "\\end{align}\n",
-    "$$\n",
-    "\n",
-    "We hebben dus:\n",
-    "\n",
-    "$$\n",
-    "\\begin{align}\n",
-    "\\pmb{y} &= \\begin{bmatrix}\n",
-    "-5 & 4\n",
-    "\\end{bmatrix}^T \\cr\n",
-    "\\pmb{X} &= \\begin{bmatrix}\n",
-    "1 & 3 \\cr\n",
-    "2 & -1\n",
-    "\\end{bmatrix}\n",
-    "\\end{align}\n",
-    "$$\n",
-    "\n",
-    "Om $\\pmb{b}$ te vinden zoeken we de inverse van $\\pmb{X}$ die voor het $2 \\times 2$ geval de volgende speciale vorm aanneemt:\n",
-    "\n",
-    "$$\n",
-    "\\begin{align}\n",
-    "\\pmb{X}^{-1} &= \\frac{1}{det(\\pmb{X})}\\begin{bmatrix}\n",
-    "x_{2,2} & -x_{1,2} \\cr\n",
-    "-x_{2,1} & x_{1,1}\n",
-    "\\end{bmatrix} \\cr\n",
-    "&= \\frac{1}{\n",
-    "    x_{1,1}x_{2,2} - x_{1,2}x_{2,1}\n",
-    "}\\begin{bmatrix}\n",
-    "x_{2,2} & -x_{1,2} \\cr\n",
-    "-x_{2,1} & x_{1,1}\n",
-    "\\end{bmatrix}\n",
-    "\\end{align}\n",
-    "$$\n",
-    "\n",
-    "We krijgen bijgevolg:\n",
-    "\n",
-    "$$\n",
-    "\\begin{align}\n",
-    "\\pmb{X}^{-1} &= \\frac{1}{\n",
-    "    -1 - 3 \\times 2\n",
-    "}\\begin{bmatrix}\n",
-    "-1 & -3 \\cr\n",
-    "-2 & 1\n",
-    "\\end{bmatrix} \\cr\n",
-    "&= \\frac{1}{-7}\\begin{bmatrix}\n",
-    "-1 & -3 \\cr\n",
-    "-2 & 1\n",
-    "\\end{bmatrix} \\cr\n",
-    "&= \\begin{bmatrix}\n",
-    "\\frac{1}{7} & \\frac{3}{7} \\cr\n",
-    "\\frac{2}{7} & -\\frac{1}{7}\n",
-    "\\end{bmatrix}\n",
-    "\\end{align}\n",
-    "$$\n",
-    "\n",
-    "en voor de uiteindelijke oplossing $\\pmb{b} = \\pmb{X}^{-1}\\pmb{y}$\n",
-    "\n",
-    "$$\n",
-    "\\begin{align}\n",
-    "\\pmb{b} &= \\begin{bmatrix}\n",
-    "\\frac{1}{7} & \\frac{3}{7} \\cr\n",
-    "\\frac{2}{7} & -\\frac{1}{7}\n",
-    "\\end{bmatrix} \\begin{bmatrix}\n",
-    "-5 \\cr\n",
-    "4\n",
-    "\\end{bmatrix} \\cr\n",
-    "&= \\begin{bmatrix}\n",
-    "\\frac{1}{7}(-5) + \\frac{3}{7}(4) \\cr\n",
-    "\\frac{2}{7}(-5) + (-\\frac{1}{7})(4)\n",
-    "\\end{bmatrix} \\cr\n",
-    "&= \\begin{bmatrix}\n",
-    "1 \\cr\n",
-    "-2\n",
-    "\\end{bmatrix}\n",
-    "\\end{align}\n",
-    "$$\n",
-    "\n",
-    "Ter verificatie:\n",
-    "\n",
-    "$$\n",
-    "\\begin{align}\n",
-    "-5 &= (1) + (-2) \\times 3 = 1 - 6 = -5 \\cr\n",
-    "4 &= (1) \\times 2 - (-2) = 2 + 2 = 4\n",
-    "\\end{align}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3c217106",
-   "metadata": {},
-   "source": []
-  }
- ],
- "metadata": {
-  "language_info": {
-   "name": "python"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+    "cells": [
+        {
+            "cell_type": "markdown",
+            "id": "d0fd4f19",
+            "metadata": {},
+            "source": [
+                "# Matrix inverse\n",
+                "\n",
+                "Matrix inversie is een sleutel tot belangrijke mogelijkheden in Machine Learning. In de vorige sectie zagen we de **identiteitsmatrix** als speciale matrix.\n",
+                "Deze spelen een centrale rol in de formele definitie van de **matrix inverse** $\\pmb{A}^{-1}$ van een matrix $\\pmb{A}$:\n",
+                "$$\n",
+                "\\pmb{A}^{-1}\\pmb{A} = \\pmb{I}_n\n",
+                "$$"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "759770f7",
+            "metadata": {},
+            "source": [
+                "## Stelsels van lineaire vergelijkingen\n",
+                "We kunnen matrix inverses gebruiken om oplossingen te vinden voor zogenaamde **stelsels van lineaire vergelijkingen**. De algemene vorm van een lineaire vergelijking is:\n",
+                "$$\n",
+                "y = \\beta_1x_1 + \\beta_2x_2 + \\ldots + \\beta_nx_n\n",
+                "$$\n",
+                "We kunnen dit in vector notatie vertalen naar:\n",
+                "$$\n",
+                "y = \\begin{bmatrix} \\beta_1 & \\beta_2 & \\ldots & \\beta_n\\end{bmatrix}^T\\begin{bmatrix}\n",
+                "x_1 \\cr\n",
+                "x_2 \\cr\n",
+                "\\vdots \\cr\n",
+                "x_n\n",
+                "\\end{bmatrix}\n",
+                "$$\n",
+                "Bij een stelsel van lineaire vergelijkingen blijft $\\pmb{b} = \\begin{bmatrix} \\beta_1 & \\beta_2 & \\ldots & \\beta_n\\end{bmatrix}^T$ constant, maar zijn er verschillende instanties van\n",
+                "$\\pmb{x} = \\begin{bmatrix} x_1 & x_2 & \\ldots & x_n\\end{bmatrix}^T$:\n",
+                "\n",
+                "$$\n",
+                "\\begin{align}\n",
+                "y_1 &= \\beta_1x_{1,1} + \\beta_2x_{1,2} + \\ldots + \\beta_nx_{1,n} \\cr\n",
+                "y_2 &= \\beta_1x_{2,1} + \\beta_2x_{2,2} + \\ldots + \\beta_nx_{2,n} \\cr\n",
+                "\\ldots \\cr\n",
+                "y_m &= \\beta_1x_{m,1} + \\beta_2x_{m,2} + \\ldots + \\beta_nx_{m,n} \\cr\n",
+                "\\end{align}\n",
+                "$$\n",
+                "Dit kunnen compact in matrix notatie schrijven:\n",
+                "$$\n",
+                "\\pmb{y} = \\pmb{X}\\pmb{b}\n",
+                "$$\n",
+                "In een stelsel van vergelijkingen is het de bedoeling om een oplossing te vinden voor $\\pmb{b}$:\n",
+                "\n",
+                "$$\n",
+                "\\begin{align}\n",
+                "\\pmb{y} &= \\pmb{X}\\pmb{b} \\cr\n",
+                "\\pmb{X}^{-1}\\pmb{y} &= \\pmb{X}^{-1}\\pmb{X}\\pmb{b} \\cr\n",
+                "\\pmb{X}^{-1}\\pmb{y} &= \\pmb{I}_n\\pmb{b} \\cr\n",
+                "\\pmb{X}^{-1}\\pmb{y} &= \\pmb{b} \\cr\n",
+                "\\pmb{b} &= \\pmb{X}^{-1}\\pmb{y}\n",
+                "\\end{align}\n",
+                "$$\n",
+                "\n",
+                "We kunnen de vergelijkingen dus oplossen voor $\\pmb{b}$ als we de inverse $\\pmb{X}^{-1}$ kunnen berekenen.\n",
+                "Dat is helaas minder evident dan we zouden hopen, maar dat is voor een volgende sectie.\n",
+                "Hier geven we een eenvoudig voorbeeld met een stelsel van 2 vergelijkingen en $n=2$.\n",
+                "\n",
+                "$$\n",
+                "\\begin{align}\n",
+                "-5 &= \\beta_1 + 3\\beta_2 \\cr\n",
+                "4 &= 2\\beta_1 - \\beta_2\n",
+                "\\end{align}\n",
+                "$$\n",
+                "\n",
+                "We hebben dus:\n",
+                "\n",
+                "$$\n",
+                "\\begin{align}\n",
+                "\\pmb{y} &= \\begin{bmatrix}\n",
+                "-5 & 4\n",
+                "\\end{bmatrix}^T \\cr\n",
+                "\\pmb{X} &= \\begin{bmatrix}\n",
+                "1 & 3 \\cr\n",
+                "2 & -1\n",
+                "\\end{bmatrix}\n",
+                "\\end{align}\n",
+                "$$\n",
+                "\n",
+                "Om $\\pmb{b}$ te vinden zoeken we de inverse van $\\pmb{X}$ die voor het $2 \\times 2$ geval de volgende speciale vorm aanneemt:\n",
+                "\n",
+                "$$\n",
+                "\\begin{align}\n",
+                "\\pmb{X}^{-1} &= \\frac{1}{det(\\pmb{X})}\\begin{bmatrix}\n",
+                "x_{2,2} & -x_{1,2} \\cr\n",
+                "-x_{2,1} & x_{1,1}\n",
+                "\\end{bmatrix} \\cr\n",
+                "&= \\frac{1}{\n",
+                "    x_{1,1}x_{2,2} - x_{1,2}x_{2,1}\n",
+                "}\\begin{bmatrix}\n",
+                "x_{2,2} & -x_{1,2} \\cr\n",
+                "-x_{2,1} & x_{1,1}\n",
+                "\\end{bmatrix}\n",
+                "\\end{align}\n",
+                "$$\n",
+                "\n",
+                "We krijgen bijgevolg:\n",
+                "\n",
+                "$$\n",
+                "\\begin{align}\n",
+                "\\pmb{X}^{-1} &= \\frac{1}{\n",
+                "    -1 - 3 \\times 2\n",
+                "}\\begin{bmatrix}\n",
+                "-1 & -3 \\cr\n",
+                "-2 & 1\n",
+                "\\end{bmatrix} \\cr\n",
+                "&= \\frac{1}{-7}\\begin{bmatrix}\n",
+                "-1 & -3 \\cr\n",
+                "-2 & 1\n",
+                "\\end{bmatrix} \\cr\n",
+                "&= \\begin{bmatrix}\n",
+                "\\frac{1}{7} & \\frac{3}{7} \\cr\n",
+                "\\frac{2}{7} & -\\frac{1}{7}\n",
+                "\\end{bmatrix}\n",
+                "\\end{align}\n",
+                "$$\n",
+                "\n",
+                "en voor de uiteindelijke oplossing $\\pmb{b} = \\pmb{X}^{-1}\\pmb{y}$\n",
+                "\n",
+                "$$\n",
+                "\\begin{align}\n",
+                "\\pmb{b} &= \\begin{bmatrix}\n",
+                "\\frac{1}{7} & \\frac{3}{7} \\cr\n",
+                "\\frac{2}{7} & -\\frac{1}{7}\n",
+                "\\end{bmatrix} \\begin{bmatrix}\n",
+                "-5 \\cr\n",
+                "4\n",
+                "\\end{bmatrix} \\cr\n",
+                "&= \\begin{bmatrix}\n",
+                "\\frac{1}{7}(-5) + \\frac{3}{7}(4) \\cr\n",
+                "\\frac{2}{7}(-5) + (-\\frac{1}{7})(4)\n",
+                "\\end{bmatrix} \\cr\n",
+                "&= \\begin{bmatrix}\n",
+                "1 \\cr\n",
+                "-2\n",
+                "\\end{bmatrix}\n",
+                "\\end{align}\n",
+                "$$\n",
+                "\n",
+                "Ter verificatie:\n",
+                "\n",
+                "$$\n",
+                "\\begin{align}\n",
+                "-5 &= (1) + (-2) \\times 3 = 1 - 6 = -5 \\cr\n",
+                "4 &= (1) \\times 2 - (-2) = 2 + 2 = 4\n",
+                "\\end{align}\n",
+                "$$"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "3c217106",
+            "metadata": {},
+            "source": []
+        }
+    ],
+    "metadata": {
+        "language_info": {
+            "name": "python"
+        }
+    },
+    "nbformat": 4,
+    "nbformat_minor": 5
 }
