--- a/book/math_foundations/linalg/special_tensors.ipynb
+++ b/book/math_foundations/linalg/special_tensors.ipynb
@@ -70,7 +70,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": 25,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -79,7 +79,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 17,
+            "execution_count": 26,
             "metadata": {},
             "outputs": [
                 {
@@ -124,7 +124,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 8,
+            "execution_count": 27,
             "metadata": {},
             "outputs": [
                 {
@@ -159,7 +159,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 18,
+            "execution_count": 28,
             "metadata": {},
             "outputs": [
                 {
@@ -207,7 +207,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 20,
+            "execution_count": 29,
             "metadata": {},
             "outputs": [
                 {
@@ -242,7 +242,7 @@
             "source": [
                 "## _Lower triangular_ matrix\n",
                 "\n",
-                "Een **_lower triangular_ matrix** is een vierkante matrix met alle elementen boven de hoofddiagonaal gelijk aan nul. **Een matrix $\\pmb{L}^{m \\times n}$ is een _lower triangular_ matrix als en slechts als $m = n$ en $U_{i,j} = 0$ voor alle $i > j$**\n",
+                "Een **_lower triangular_ matrix** is een vierkante matrix met alle elementen boven de hoofddiagonaal gelijk aan nul. **Een matrix $\\pmb{L}^{m \\times n}$ is een _lower triangular_ matrix als en slechts als $m = n$ en $L_{i,j} = 0$ voor alle $i > j$**\n",
                 "$$\n",
                 "\\pmb{L}_n = \\begin{bmatrix}\n",
                 "D_{1,1} & 0 & 0 & \\ldots & 0 \\cr\n",
@@ -256,7 +256,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 22,
+            "execution_count": 30,
             "metadata": {},
             "outputs": [
                 {
